# Homework-Banking-Application

./: .coverage  .flake8  .gitignore  README  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
test/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
