[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flake8 = "^7.3.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.1"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[tool.black]
# Максимальная длина строки
line-lenght = 119
# Файлы которые не нужно форматировать
exlude = "/.git"

[tool.isort]
line-lenght = 119